--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NottMyStyle</string>
-    <string name="facebook_app_id">775950776083601</string>
-    <string name="fb_login_protocol_scheme">fb775950776083601</string>
+    <string name="app_name">poco</string>
+    <string name="facebook_app_id">309913906330580</string>
+    <string name="fb_login_protocol_scheme">fb309913906330580</string>
 </resources>
